Fix calendar style (z-index)

--- a/skins/standard/calendar.css
+++ b/skins/standard/calendar.css
@@ -3,7 +3,8 @@
 	background-color:#fff;
 	border:1px solid #444;
 	position:absolute;
-	padding:0 5px;
+	padding:5px;
+	z-index:100;
 }
 .calendar-box select.calendar-month { width:90px; margin-right: 10px; }
 .calendar-box select.calendar-year { width:70px; }
